fix(): sonar lint fixes